testsuite/tests/overloadedrecflds/should_fail/overloadedrecfldsfail01.stderr

overloadedrecfldsfail01.hs:14:10: error:
    Invalid record update.
    No constructor in scope has all of the following fields: ‘z’, ‘y’
